<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="menus.Comentario">

    <TextView
        android:id="@+id/TxvComent"
        android:layout_width="314dp"
        android:layout_height="91dp"
        android:onClick="enviarCorreo"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/comentario"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/TexArea"
        android:layout_width="313dp"
        android:layout_height="220dp"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="49dp"
        android:autofillHints=""
        android:ems="10"
        android:foregroundGravity="center"
        android:gravity="start|center_horizontal|top"
        android:hint="@string/TextA"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxvComent" />

    <Button
        android:id="@+id/Btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="151dp"
        android:layout_marginLeft="151dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="160dp"
        android:onClick="enviarCorreo"
        android:text="@string/ButtonEnviar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TexArea" />

    <EditText
        android:id="@+id/Mail"
        android:layout_width="278dp"
        android:layout_height="45dp"
        android:layout_marginStart="66dp"
        android:layout_marginLeft="66dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="67dp"
        android:layout_marginRight="67dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/mail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxvComent" />
</androidx.constraintlayout.widget.ConstraintLayout>