<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerPerfil1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/CardImage"
        android:layout_width="378dp"
        android:layout_height="163dp"
        android:padding="20dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <!-- </LinearLayout>-->


            <ImageView
                android:id="@+id/imgVer2"
                android:layout_width="296dp"
                android:layout_height="107dp"
                android:layout_marginStart="45dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="70dp"
                android:layout_marginRight="70dp"
                android:contentDescription="@string/saludo"
                android:src="@mipmap/ic_launcher_round"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/ImgDorado2"
                android:layout_width="37dp"
                android:layout_height="39dp"
                android:layout_marginTop="133dp"
                android:layout_marginEnd="152dp"
                android:layout_marginRight="152dp"
                android:layout_marginBottom="18dp"
                android:contentDescription="@string/HuesoDorado"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.814"
                app:srcCompat="@drawable/huesodorado" />

            <TextView
                android:id="@+id/ContadorLike2"
                android:layout_width="38dp"
                android:layout_height="26dp"
                android:layout_marginStart="148dp"
                android:layout_marginLeft="148dp"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="17dp"
                android:hint="@string/ContadorLike"
                android:text="@string/textview"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgVer"
                app:layout_constraintVertical_bias="0.769" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>